--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -49,4 +49,4 @@ jobs:
       with:
         context: .
         push: true
-        tags: ${{ secrets.DOCKER_USERNAME }}/quote-generator:latest
+        tags: ${{ secrets.DOCKERHUB_USERNAME }}/quote-generator:latest
